fix quad z-index

--- a/nwcc_pyramid/static/styles/theme.css
+++ b/nwcc_pyramid/static/styles/theme.css
@@ -214,7 +214,7 @@ hr {
 }
 
 .quad {
-  z-index: 9999999999999999;
+  /* z-index: 9999999999999999; */
 }
 
 .q1home {
